# blog-ai

./: .env.example  .gitignore  ARCHITECTURE.html  ARCHITECTURE.md  DOCUMENTATION_INDEX.md  GETTING_STARTED.md  Makefile  README.md  package-lock.json  package.json
.github/workflows/: deploy.yml
admin-ui/: .env.example  package-lock.json  package.json  tsconfig.json
admin-ui/src/: App.tsx  index.css
admin-ui/src/components/: RollbackPanel.tsx  SmartPublishing.tsx
admin-ui/src/pages/: Analytics.css  Analytics.tsx  ArticleEdit.css  ArticleEdit.tsx  Articles.css  (+7 more)
blog-public/: .env.local.example  .gitignore  QUICKSTART.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
blog-public/app/: globals.css  layout.tsx  page.tsx
blog-public/components/: HeaderBar.tsx
blog-public/lib/: api.ts  articleUtils.ts  sampleData.ts  storageData.ts
blog-public/public/: 404.html
blog-public/scripts/: createArticleIndexPages.mjs
blog-service-rust/: Cargo.toml
blog-service-rust/src/: cache.rs  main.rs  storage.rs
blog-service-rust/src/admin/: auth.rs  handlers.rs  mod.rs  publish.rs  smart_publish.rs
blog-service-rust/src/public/: handlers.rs  mod.rs  routes.rs
infrastructure/: .env.example  README.md  cdk.json  package-lock.json  package.json  sam-template.yaml  tsconfig.json
infrastructure/config/: cache-config.ts  environments.d.ts  environments.ts
infrastructure/lib/: ai-blog-infrastructure-stack.d.ts  ai-blog-infrastructure-stack.ts  monitoring-stack.ts  smart-publishing-stack.ts
layers/playwright/: package-lock.json  package.json
rust_playwright_crawler/: Dockerfile
scraper-rust/: .env  .env.example  Cargo.toml  DEPLOYMENT.md  Makefile  README.md
scraper-rust/src/: analytics.rs  config.rs  html_generator.rs  main.rs  models.rs  publisher.rs  scraper.rs  search.rs  storage.rs  translator.rs
scraper-rust/src/parsers/: huggingface.rs  mod.rs  openai.rs  techcrunch.rs
scripts/: build-lambda.sh  create-admin-user.sh  deploy.sh  init-local-data.sh  init-local-tables.sh  logs.sh  test-deployment.sh  test-smart-publishing.sh  update-lambda.sh  validate-setup.sh
serverless/: Cargo.toml  README.md
serverless/src/: config.rs  lib.rs  models.rs  storage.rs  utils.rs
serverless/src/lambdas/: scraper_handler.rs  site_publisher.rs
serverless/src/parsers/: mod.rs  openai_company_announcements.rs  openai_engineering.rs  openai_product_releases.rs  openai_research.rs  openai_safety_alignment.rs  openai_security.rs
serverless/src/services/: fallback_crawler.rs  mod.rs  playwright_crawler.rs  scrapedo_crawler.rs  scraper.rs
(+23 files in other folders)
