[package]
name = "blog-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web scraping
reqwest = { version = "0.11", features = ["json", "cookies", "native-tls-vendored"] }
scraper = "0.24.0"
tokio = { version = "1", features = ["full"] }

# AWS (compatible with Rust 1.75+)
aws-config = "1.0"
aws-sdk-dynamodb = "1.0"
aws-sdk-s3 = "1.0"
aws-sdk-cloudfront = "1.0"
aws-sdk-bedrockruntime = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0.17"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
url = "2.5"
sha2 = "0.10"

# Lambda
lambda_runtime = "1.0.1"

[[bin]]
name = "scraper"
path = "src/main.rs"


