[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = { version = "1.0.1", optional = true }
rayon = { version = "1.5", optional = true }
serde = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
scraper = "0.24.0"
aws-config = "1.0"
aws-sdk-dynamodb = "1.0"
aws-sdk-s3 = "1.116.0"
sha2 = "0.10"
serde_json = "1.0"
playwright = "0.0.20"

[features]
default = ["lambda"]
lambda = ["lambda_runtime", "rayon"]


[[bin]]
name = "serverless"
path = "src/lambdas/scraper_handler.rs"
test = false
required-features = ["lambda"]

[profile.dev]
debug = true
